--- a/job-search/package.json
+++ b/job-search/package.json
@@ -18,10 +18,14 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
   }
